--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-
+<meta charset="UTF-8">
 <head>
-  <title>Ingenier &iacute;a Civil</title>
+  <title>Ingenierí;a Civil</title>
   <meta name="Descripcion" content="website description" />
   <meta name="Tareas" content="website keywords, website keywords" />
   <meta http-equiv="Contenido" content="text/html; charset=windows-1252" />
@@ -17,7 +17,7 @@
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
           <center>
-	<h1><a href="index.html">Ingenier &iacute;a<span class="logo_colour">Civil</span></a></h1>
+	<h1><a href="index.html">Ingeniería<span class="logo_colour">Civil</span></a></h1>
           <h2>Para futuros Ingenieros</h2>
 	</center>
         </div>
