--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-<meta charset="UTF-8">
+<meta http-equiv='Content-Type' content='text/html; charset=iso-8859-1' >
 <head>
   <title>Ingenierí;a Civil</title>
   <meta name="Descripcion" content="website description" />
