--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-<meta http-equiv='Content-Type' content='text/html; charset=iso-8859-1' >
 <head>
-  <title>Ingenierí;a Civil</title>
+  <title>Ingenieria Civil</title>
+	<meta charset="utf-8">
   <meta name="Descripcion" content="website description" />
   <meta name="Tareas" content="website keywords, website keywords" />
   <meta http-equiv="Contenido" content="text/html; charset=windows-1252" />
