--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Ingenieria Civil</title>
-	<meta charset="utf-8">
+<meta http-equiv='Content-Type' content='text/html; charset=iso-8859-1' >
   <meta name="Descripcion" content="website description" />
   <meta name="Tareas" content="website keywords, website keywords" />
   <meta http-equiv="Contenido" content="text/html; charset=windows-1252" />
